fix alignment in search results

--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,11 @@ h3,
   display: inline;
 }
 
-#searchResults {
+.searchResults {
   display: flex;
   flex-flow: row wrap;
   gap: 10px;
-  place-items: center;
+  place-content: center;
 }
 
 /* @media screen and (max-width: 820px) {
